Fix presence control navigation alignment (datepicker/time) #456

--- a/src/app/presence-control/components/presence-control-header/presence-control-header.component.scss
+++ b/src/app/presence-control/components/presence-control-header/presence-control-header.component.scss
@@ -15,6 +15,7 @@
     ". date time dropdown-caret"
     ". description description dropdown-caret";
   grid-template-columns: 1fr auto auto 1fr;
+  align-items: center;
 }
 
 .lesson-date {
@@ -31,7 +32,6 @@
   i {
     color: $body-color;
     position: relative;
-    top: 2px;
   }
 }
 
